<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:background="@color/colorPrimary"
    tools:context=".view.InitOptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/applogo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/init_button"
                android:fontFamily="@font/comforta_regular"
                android:onClick="goLogin"
                android:text="@string/login_button"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/guest_button"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/init_button2"
                android:fontFamily="@font/comforta_regular"
                android:text="@string/guestButton"
                android:onClick="goGuest"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:padding="15dp"
                android:orientation="horizontal"
                android:onClick="goRegister">

                <TextView
                    android:id="@+id/register_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comforta"
                    android:text="@string/no_est_s_registrado"
                    android:textSize="20sp"
                    android:textColor="#FFF"/>
                <TextView
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:id="@+id/register_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comforta"
                    android:text="@string/reg_strate"
                    android:textColor="#FE615A"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>