<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginVActivity" >
    <data>
        <variable
            name="viewModel"
            type="com.caribejobs.viewmodel.LoginVViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="25sp"
                android:text="@={viewModel.userLogin.username}"
                android:fontFamily="@font/comforta_regular"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/usernameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comforta"
                android:text="@{viewModel.errorUsername}"
                android:visibility="@{viewModel.errorUsernameVisibility}"
                android:textColor="#FE615A"
                android:textSize="10sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <EditText
                android:id="@+id/inPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.userLogin.password}"
                android:padding="8dp"
                android:textSize="25sp"
                android:fontFamily="@font/comforta_regular"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/passwordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comforta"
                android:text="@{viewModel.errorPassword}"
                android:visibility="@{viewModel.errorPasswordVisibilty}"
                android:textColor="#FE615A"
                android:textSize="10sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/comforta_regular"
            android:text="@string/login_button"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:onClick="@{()-> viewModel.onLoginClicked()}"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:padding="15dp"
            android:orientation="horizontal"
            android:onClick="goRegister">
            <TextView
                android:id="@+id/register_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comforta"
                android:text="@string/no_est_s_registrado"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comforta"
                android:text="@string/reg_strate"
                android:textColor="#FE615A"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</layout>